--- a/flex.html
+++ b/flex.html
@@ -18,14 +18,57 @@
   <link rel="stylesheet" type="text/css" media="print" href="./especialStyle.css">
 
 <style>
-main{
-    margin:60px;
+.contenedor-cajasdemo{
+    width: 100%;    
 }
+
+.cajas-flex1{    
+    display:flex;
+    flex-wrap:wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap:20px;
+}
+
+.cajas-flex1 div{
+    width: 150px;
+    height: 100px;
+    color:rgb(0, 0, 0);
+    text-align: center;
+    margin: 10px;
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color:rgb(104, 199, 117);
+    line-height: 100px;
+}
+
+.cajas-flex2{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column-reverse;
+    justify-content:flex-end;
+    align-items: center;
+    gap: 20px;
+}
+
+.cajas-flex2 div{
+    width: 150px;
+    height: 100px;
+    color: black;
+    text-align: center;
+    margin: 10px;
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+    background-color: rgb(132, 121, 182);
+    line-height: 100px;
+}
+
 </style>
 </head>
 
 <body>
-<div id="contenedor">    
+    <div id="contenedor">    
     <header>
         <div class="cabecera-superior">
             <div class="info">
@@ -34,7 +77,7 @@ main{
             </div>
             <div class="banderas">
                 <img src="./assets/images/banderaespanya.png" alt="BanderaEspanya" >
-                <img src="./assets/images/banderainglaterra.jpg" >
+                <img src="./assets/images/banderainglaterra.jpg" alt="BanderaInglaterra">
             </div>           
         </div>
         
@@ -59,15 +102,32 @@ main{
         </div>
          
     </header>
+
     <main>
+      <div class="contenedor-cajasdemo">  
+            <div class="cajas-flex1">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+            </div>
 
+            <div class="cajas-flex2">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+            </div>
+       </div> 
     </main>   
-  
 
-    <footer>
+        <footer>
+    <div class="ubicacion">    
         <h3>Ubicación Google Maps</h3>
-        <iframe src ="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d782.2724889426722!2d-0.48898763849540644!3d38.346899943720864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd62364d5ef69877%3A0x25366c2797ea4231!2sAv.%20Alfonso%20El%20Sabio%2C%2036%2C%2003004%20Alicante%20(Alacant)%2C%20Alicante!5e0!3m2!1ses!2ses!4v1760960498557!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
+        <div class="map-responsive">
+            <iframe src ="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d782.2724889426722!2d-0.48898763849540644!3d38.346899943720864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd62364d5ef69877%3A0x25366c2797ea4231!2sAv.%20Alfonso%20El%20Sabio%2C%2036%2C%2003004%20Alicante%20(Alacant)%2C%20Alicante!5e0!3m2!1ses!2ses!4v1760960498557!5m2!1ses!2ses" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </div>
         <h4>© 2025 DIW SUPERMERCADOS DIW</h4>
         <h4>Redes sociales</h4>
     <div class="pie-redes">
@@ -94,6 +154,6 @@ main{
         </a>
     </div>
     </footer>
-</div>    
+    </div>    
 </body>  
 </html>
