--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="banderas">
                 <img src="./assets/images/banderaespanya.png" alt="BanderaEspanya" >
-                <img src="./assets/images/banderainglaterra.jpg" >
+                <img src="./assets/images/banderainglaterra.jpg" alt="BanderaInglaterra">
             </div>           
         </div>
         
@@ -108,13 +108,15 @@
             </ul>
         </aside> 
       
-    </main>   
-  
+    </main>     
 
     <footer>
+    <div class="ubicacion">    
         <h3>Ubicación Google Maps</h3>
-        <iframe src ="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d782.2724889426722!2d-0.48898763849540644!3d38.346899943720864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd62364d5ef69877%3A0x25366c2797ea4231!2sAv.%20Alfonso%20El%20Sabio%2C%2036%2C%2003004%20Alicante%20(Alacant)%2C%20Alicante!5e0!3m2!1ses!2ses!4v1760960498557!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
+        <div class="map-responsive">
+            <iframe src ="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d782.2724889426722!2d-0.48898763849540644!3d38.346899943720864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd62364d5ef69877%3A0x25366c2797ea4231!2sAv.%20Alfonso%20El%20Sabio%2C%2036%2C%2003004%20Alicante%20(Alacant)%2C%20Alicante!5e0!3m2!1ses!2ses!4v1760960498557!5m2!1ses!2ses" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </div>
         <h4>© 2025 DIW SUPERMERCADOS DIW</h4>
         <h4>Redes sociales</h4>
     <div class="pie-redes">
