--- a/contacto.html
+++ b/contacto.html
@@ -43,7 +43,7 @@
         </div>           
     </div>
     
-    <div class="cabecera-inferio">
+    <div class="cabecera-inferior">
         <nav> 
             <div class="logo">            
                 <a href="index.html">
