--- a/servicios.html
+++ b/servicios.html
@@ -56,6 +56,8 @@
 
     .tabla td, th{
       border:1px solid black;
+      color:black;
+      font-family: Arial, Helvetica, sans-serif;
     }
   </style>  
 </head>
